<resources>
    <string name="app_name">Freenet mobile</string>
    <string name="action_settings">Settings</string>
    <string name="node_running">Freenet is running</string>
    <string name="node_starting_up">Starting up</string>
    <string name="node_shutting_down">Shutting down</string>
    <string name="error_starting_up">Error starting Freenet</string>
    <string name="tap_to_navigate">Tap here to Navigate</string>
    <string name="may_take_a_while">This may take a while</string>
    <string name="error_detail">Restart the application and try again.\nIf the error persists reinstall the application.</string>
    <string name="connected_to_the_network">You\'re connected to the Freenet network</string>
    <string name="start_label">Start</string>
    <string name="shutdown_label">Shutdown</string>
    <string name="freenet">Freenet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">App info</string>
    <!-- Preference Titles -->
    <string name="battery_and_data">Battery and data usage</string>
    <string name="freenet_web">Freenet Web</string>
    <!-- Battery and Data Preferences -->
    <string name="preserve_data">Preserve data</string>
    <string name="preserve_data_summary">Freenet makes intensive use of network data. With this option enabled Freenet will run only when connected to Wifi.\n\nThese settings don\'t apply to Friend-to-Friend connections. Needs to restart the node to apply.</string>
    <string name="preserve_battery">Preserve battery</string>
    <string name="preserve_battery_summary">Freenet may cause the battery to discharge quickly. With this option enabled Freenet will run only when charging.</string>
    <!-- Freenet Web Preferences -->
    <string name="web_access">Access from PC</string>
    <string name="web_access_summary">Access Freenet running on your phone from a PC or Tablet. The device must be on the same network. Access it through: http://%1$s:%2$d.\n\nNeeds to restart the node to apply.</string>
    <string name="node_paused">Freenet is paused.</string>
    <string name="app_version" translatable="false">v%1$s</string>

    <string name="text_about"><![CDATA[
<h2>Version</h2>
Freenet Mobile v%1$s. <a href="https://github.com/freenet-mobile/app/releases/tag/v%1$s">See Changelog</a>.
<br>
Freenet %2$s Build #%3$s.
<p>
Open source application built around Freenet Project.
</p>

<h2>Developer info</h2>
<p>
Freenet mobile: <a href="https://github.com/desyncr">Desyncr</a>,
Freenet: See <a href="https://github.com/freenet/wiki/wiki/People">contributors</a>.
</p>

<h2>Donate</h2>
<p>
Help us keep Internet freedom alive and expand human liberty.
<a href="https://freenetproject.org/appeal-for-donations.html">Learn more about our fundraiser</a>.
</p>
<p>
<b>All support is very much appreciated.</b>
</p>

<h2>Resources</h2>
<p>
<ul>
<li><a href="https://github.com/freenet-mobile/app/issues">Issues and support</a></li>
<li><a href="https://github.com/freenet-mobile/app/projects/1">Development roadmap</a></li>
</ul>
</p>

<h2>Acknowledgement</h2>
<p>
<a href="https://freenetproject.org/pages/help.html&num;can-i-get-trouble-if-i-run-a-node">Read and understand</a> the potential risks involving running a Freenet node.
</p>

<h2>License</h2>
<p>
GNU General Public License v2.0. Read license <a href="https://github.com/freenet-mobile/app/blob/master/LICENSE">here</a>.
</p>

<h2>Libraries</h2>
<p>
<ul>
<li>fred: <a href="https://github.com/freenet/fred">freenet/fred</a></li>
<li>freenet-ext: <a href="https://github.com/freenet-mobile/freenet-ext">freenet-mobile/freenet-ext</a></li>
<li>onion-common: <a href="https://github.com/freenet-mobile/onion-common">freenet-mobile/onion-common</a></li>
<li>onion-fec: <a href="https://github.com/freenet-mobile/onion-fec">freenet-mobile/onion-fec</a></li>
<li>jFCPlib: <a href="https://github.com/Bombe/jFCPlib">Bombe/jFCPlib</a></li>
<li>mantissa: <a href="https://github.com/freenet-mobile/mantissa">freenet-mobile/mantissa</a></li>
<li>lzma-sdk: org.b1.pack:lzma-sdk-4j</li>
<li>bouncycastle: org.bouncycastle:bcprov-jdk15on</li>
<li>process-phoenix: com.jakewharton:process-phoenix</li>
</ul>
</p>
]]></string>
    <string name="acknowledgement_text"><![CDATA[I have <a href="https://freenetproject.org/pages/help.html&num;can-i-get-trouble-if-i-run-a-node">read and understand</a> the potential risks involving running a Freenet node.]]></string>
</resources>